--- a/src/hero.css
+++ b/src/hero.css
@@ -116,7 +116,8 @@
 
   .image-indicator {
     bottom: 10px;
-    left: 10px;
+    left: 50%;
+    transform: translateX(-50%);
     gap: 5px;
   }
 }
