--- a/src/about.css
+++ b/src/about.css
@@ -11,7 +11,8 @@
 .about-overlay {
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent 60%);
+  /*background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent 60%);*/
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.5) 60%, transparent 90%);
   display: flex;
   align-items: flex-end;
   padding: 60px;
