--- a/src/clients.css
+++ b/src/clients.css
@@ -4,12 +4,6 @@
   overflow: hidden;
 }
 
-.client-image {
-  width: 50%;
-  background-size: cover;
-  background-position: center;
-}
-
 .client-content {
   width: 50%;
   background-color: white;
@@ -17,6 +11,26 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.client-image-container {
+  width: 50%;
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+}
+
+.client-image-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  opacity: 1;
+  transition: opacity 0.8s ease;
+  z-index: 1;
 }
 
 .testimonial-text {
