--- a/src/footer.css
+++ b/src/footer.css
@@ -2,7 +2,7 @@
   background-size: cover;
   background-position: center;
   color: white;
-  height: 100vh;
+  height: 50vh;
   position: relative;
   display: flex;
   align-items: center;
@@ -20,13 +20,14 @@
   box-sizing: border-box;
 }
 
-.footer-top {
+.footer-top-stacked {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: flex-start;
   text-align: left;
-  flex-wrap: wrap;
+  gap: 30px;
 }
+
 
 .footer-center {
   text-align: center;
@@ -40,12 +41,12 @@
 }
 
 .footer-text {
-  font-size: 32px;
-  line-height: 1.4;
-  flex: 1;
-  min-width: 250px;
-  text-align: center;
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 1.3;
+  max-width: 600px;
 }
+
 
 .footer-contact {
   flex: 1;
